Added hibernate JPA configuration for Oracle database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,28 @@
 server.port=9045
 
 #spring.jpa.database=POSTGRESQL
-#spring.jpa.database=ORACLE
+spring.jpa.database=ORACLE
 #spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.url=jdbc:postgresql://kedar-postgres.chipcdtjsdye.us-east-2.rds.amazonaws.com:5432/postgres
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 #spring.datasource.username=postgres
-#spring.datasource.username=system
+spring.datasource.username=system
 #postgres local db password
 #spring.datasource.password=predix
 #spring.datasource.password=awspostgres5
-#spring.datasource.password=tcstvm
+spring.datasource.password=Oracledb5
 
-#hibernate config
+# hibernate config
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
 
 retry.delay = 2000
 retry.max.delay = 2500
