--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -35,6 +39,12 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.oracle.jdbc/ojdbc8 -->
+		<dependency>
+		    <groupId>com.oracle.jdbc</groupId>
+		    <artifactId>ojdbc8</artifactId>
+		    <version>18.3.0.0</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
 		    <groupId>org.json</groupId>
@@ -53,6 +63,31 @@
 		    <artifactId>spring-retry</artifactId>
 		</dependency>
 	</dependencies>
+	
+	<repositories>
+	  <repository>
+	    <id>maven.oracle.com</id>
+	    <name>oracle-maven-repo</name>
+	    <url>https://maven.oracle.com</url>
+	    <layout>default</layout>
+	    <releases>
+	      <enabled>true</enabled>
+	      <updatePolicy>always</updatePolicy>
+	    </releases>
+	  </repository>
+	</repositories>
+	<pluginRepositories>
+	  <pluginRepository>
+	    <id>maven.oracle.com</id>
+	    <name>oracle-maven-repo</name> 
+	    <url>https://maven.oracle.com</url>
+	    <layout>default</layout>
+	    <releases>
+	      <enabled>true</enabled>
+	      <updatePolicy>always</updatePolicy>
+	    </releases>
+	  </pluginRepository>
+	</pluginRepositories>
 
 	<build>
 		<plugins>
