--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,31 @@
 		    <groupId>org.springframework.retry</groupId>
 		    <artifactId>spring-retry</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator-annotation-processor -->
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator-annotation-processor</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>javax.el</groupId>
+		    <artifactId>javax.el-api</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.web</groupId>
+		    <artifactId>javax.el</artifactId>
+		    <version>2.2.6</version>
+		</dependency>
 	</dependencies>
 	
 	<repositories>
@@ -127,6 +152,24 @@
 		          <artifactId>jackson-annotations</artifactId>
 		          <version>${jackson.version}</version>
 		        </dependency>
+		        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+				<dependency>
+				    <groupId>javax.validation</groupId>
+				    <artifactId>validation-api</artifactId>
+				    <version>2.0.1.Final</version>
+				</dependency>
+				<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+				<dependency>
+				    <groupId>org.hibernate.validator</groupId>
+				    <artifactId>hibernate-validator</artifactId>
+				    <version>6.0.17.Final</version>
+				</dependency>
+				<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator-annotation-processor -->
+				<dependency>
+				    <groupId>org.hibernate.validator</groupId>
+				    <artifactId>hibernate-validator-annotation-processor</artifactId>
+				    <version>6.0.17.Final</version>
+				</dependency>
 		    </dependencies>
 			</plugin>
 			<plugin>
