--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,18 @@ spring.jpa.hibernate.ddl-auto=none
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 
+# MongoDB connection config
+spring.data.mongodb.uri=mongodb://kedar:password@localhost:27017/mydb
+
+# MongoDB collections
+config.col=config
+
+# MongoDB document ids
+config.doc.id=5e2bd965b964cc34f9cb775d
+
+# Ehcache config file path
+spring.cache.jcache.config=classpath:ehcache.xml
+
 retry.delay = 2000
 retry.max.delay = 2500
 retry.multiplier = 1.1
